[package]
name = "clashui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
crossterm = "0.25.0"
percent-encoding = "2.2.0"
reqwest = { version = "0.11.13", features = ["json", "blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
tui = "0.19.0"
